# open-source-free-cascader

./: README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  readme_change_validator.yml
examples/: test_csv_test_data.py  test_llm_cascade.py  test_llm_orchestrator
examples/data/: science_questions.csv
free_apis_llm_cascade/free_apis_llm_cascade.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/: cascade.py
src/free_apis_llm_cascade/: cascade.py  orchestrator.py
src/free_apis_llm_cascade/providers/: hosted_models.py
