[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "free_apis_llm_cascade"
version = "0.1.0"
description = "A library for free cascading LLM API calls."
authors = [
    {name = "Henry Michaelson"},
    {name = "Yash Agrawal"}
]
readme = "README.md"
requires-python = ">=3.6"
license = {file = "LICENSE"}
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.25.1",
    "numpy>=1.20.0,<2.0.0",
    "pandas~=1.2.0",
    "python-dotenv",
    "scikit-learn",
    "google-generativeai",
    "groq",
    "requests",
    "openai"
]

[project.urls]
Homepage = "https://github.com/h-michaelson20/open-source-free-cascader"
Repository = "https://github.com/h-michaelson20/open-source-free-cascader.git"

[tool.setuptools.packages.find]
where = ["free_apis_llm_cascade"]

[tool.setuptools.package-data]
"free_apis_llm_cascade" = ["py.typed"]
